# toyc_compiler9

./: CMakeLists.txt  README.md  run_tests.sh
src/: lexer.l  main.cpp  parser.y
src/ast/: ast.hpp
src/codegen/: riscv.cpp  riscv.hpp
src/common/: types.hpp
src/semantic/: analyzer.hpp
